contempla los datos de musica

--- a/content/templates/product/product.html
+++ b/content/templates/product/product.html
@@ -96,14 +96,29 @@
 				<label><a href="/Comentario?ID_ARTICULO={{ d.EntityId }}&idSeccion=">S&eacute; el primero en comentarlo!</a></label>
 			{%- endif %}
 			</div>
-			<div class="dInfoCalifBoton"><span><a href="/Comentario?ID_ARTICULO={{ d.EntityId }}&idSeccion="></a></span><a href="#"><div>AGREGAR COMENTARIO</div></a></div></div></div></div>
+			<div class="dInfoCalifBoton"><span><a href="/Comentario?ID_ARTICULO={{ d.EntityId }}&idSeccion="><div>AGREGAR COMENTARIO</div></a></div></div></div></div>
 		</div>
 	</div>
     <div id="dInfoCompl">
-    	<div class="dSolapas" id="datosCompl">
-			<div class="tmtkMesaMenuMod"><img class="solapasTitDatosPrinc" title="Datos principales"  alt="<tmpl_var altDatosPrincipales>" src="/imagenes/rediseno/imagenes/comun/t-datosPrinc.gif" /></div>
-			<div class="dResena">{%- if getOnixItem(d.Texts, '17') -%}<span>Solapa:</span>{{ getOnixItem(d.Texts, '17') }}{%- endif %}{%- if getOnixItem(d.Texts, '18') -%}<span>Contratapa:</span>{{ getOnixItem(d.Texts, '18') }}{%- endif %}{%- if getOnixItem(d.Texts, '01') -%}<span>Sinopsis:</span>{{ getOnixItem(d.Texts, '01') }} {%- else -%} {%- if getOnixItem(d.Texts, '02') -%}<span>Sinopsis:</span>{{ getOnixItem(d.Texts, '02') }} {%- endif %} {%- endif %}</div>
-        </div>
+    	{%- if d.Categoria_Seccion == 1 -%}
+	    	{%- if getOnixItem(d.Texts, '17') or getOnixItem(d.Texts, '18') or getOnixItem(d.Texts, '01') or getOnixItem(d.Texts, '02') -%}
+	    	<div class="dSolapas" id="datosCompl">
+				<div class="tmtkMesaMenuMod"><img class="solapasTitDatosPrinc" title="Datos principales"  alt="<tmpl_var altDatosPrincipales>" src="/imagenes/rediseno/imagenes/comun/t-datosPrinc.gif" /></div>
+				<div class="dResena">{%- if getOnixItem(d.Texts, '17') -%}<span>Solapa:</span>{{ getOnixItem(d.Texts, '17') }}{%- endif %}{%- if getOnixItem(d.Texts, '18') -%}<span>Contratapa:</span>{{ getOnixItem(d.Texts, '18') }}{%- endif %}{%- if getOnixItem(d.Texts, '01') -%}<span>Sinopsis:</span>{{ getOnixItem(d.Texts, '01') }} {%- else -%} {%- if getOnixItem(d.Texts, '02') -%}<span>Sinopsis:</span>{{ getOnixItem(d.Texts, '02') }} {%- endif %} {%- endif %}</div>
+	        </div>
+	        {%- endif %}
+	    {%- elif d.Categoria_Seccion == 4 %}
+	    	<div class="dSolapas" id="datosCompl">
+				<div class="tmtkMesaMenuMod"><img class="solapasTitDatosPrinc" title="Datos principales"  alt="<tmpl_var altDatosPrincipales>" src="/imagenes/rediseno/imagenes/comun/t-datosPrinc.gif" /></div>
+				<div class="dResena">Musica: Lista De Temas de <b>{{ d.Title.decode('utf-8')|e }}</b><br>
+				{%- if d.Content -%}
+					{% for content in d.Content %}
+						{{ content.ComponentNumber }}&nbsp;-&nbsp;{{ content.EffectiveTitle }}<br>
+					{% endfor %}
+				{%- endif %}
+				</div>
+	        </div>
+        {%- endif %}
 		{%- if getOnixItem(d.Texts, '04') -%}
 			<div class="dSolapas" id="indCont">
 	            <div class="tmtkMesaMenuMod"><div class="solapasTitIndCont" title="&Iacute;ndice de contenidos"/></div></div>
