--- a/content/templates/product/index.html
+++ b/content/templates/product/index.html
@@ -128,6 +128,9 @@
 		fillPrice(null);
 	    fillComments('detail');
 	    fillRelatedProduct(null);
+	    {%- if d.Categoria_Seccion == 1 -%}
+	    	{% include "product/googleBooks.js" %}
+	    {%- endif %}
 
 	</script>
 {%- endblock %}
