Escape titles for products

--- a/content/templates/product/product.html
+++ b/content/templates/product/product.html
@@ -27,7 +27,7 @@
 	{%- if texts is iterable -%}
 		{%- for text in texts -%}
 			{%- if text.EntryCode == code -%}
-				{{ text.TextContent }}
+				{{ text.TextContent.decode('utf-8') }}
 			{%- endif %}
 		{%- endfor %}
 	{%- endif %}
@@ -65,7 +65,7 @@
 <a href="/{{ getSection(d.Categoria_Seccion) }}" class="panelSeccAct"></a>
 <div class="detalleInfoPrinc">
    	<div id="dTopLeft">
-        <div class="dImagenes"><div class="detalleImagen"><img src="{{ url.images ~ d.CoverSmall }}" alt="{{ d.Title }}" title="{{ d.Title }}"></div></div>
+        <div class="dImagenes"><div class="detalleImagen"><img src="{{ url.images ~ d.CoverSmall }}" alt="{{ d.Title.decode('utf-8')|e }}" title="{{ d.Title.decode('utf-8')|e }}"></div></div>
 		<div class="dInfoPrincipal">
 			<div class="dInfoTit"><h1><b style="font-size:20px;">{{ d.Title.decode('utf-8')|e }}</b></h1></div>
 			{%- if d.Authors -%}
@@ -76,9 +76,9 @@
             <span>I.S.B.N : {{ d.Identifiers[0].IDValue }}</span>
             {%- endif %}
             <span>Clasificaci&oacute;n: {%- for categorie in d.Categories -%}<a href="{{ categorie.URL }}">{{ categorie.Title.decode('utf-8')|e }}</a>{%- if not loop.last -%}&nbsp;&raquo;&nbsp;{%- endif %} {%- endfor %}</span>
-            {%- if d.ProductForm -%}<span>Formato: {{ d.ProductForm_desc }}</span>{%- endif %}
-            <span>Disponibilidad: {{ d.ProductAvailability_desc }}</span>
-            {%- if d.ExtentUnit -%}<span>{{ d.ExtentUnit_desc }}:{{ d.ExtentValue }}</span>{%- endif %}
+            {%- if d.ProductForm -%}<span>Formato: {{ d.ProductForm_desc.decode('utf-8')|e }}</span>{%- endif %}
+            <span>Disponibilidad: {{ d.ProductAvailability_desc.decode('utf-8')|e }}</span>
+            {%- if d.ExtentUnit -%}<span>{{ d.ExtentUnit_desc.decode('utf-8')|e }}:{{ d.ExtentValue }}</span>{%- endif %}
             {%- set pd = d.PublishingDateValue -%}
             <span>Publicaci&oacute;n: {{- (pd[6:8], pd[4:6], pd[0:4])|join('/') -}} | Idioma: {{- languages[d.LanguageCode] -}}</span>
             <div class="dInfoM">{%- if getOnixItem(d.Texts, '24') -%}<a href="#primerCap">[+] Primer capitulo</a>&nbsp;{%- endif %}{%- if getOnixItem(d.Texts, '04') -%}<a href="#indCont">[+] Indice de contenidos</a>&nbsp;{%- endif %}{%- if getOnixItem(d.Texts, '13') -%}<a href="#biogra">[+] Biografia</a>&nbsp;{%- endif %}{%- if getOnixItem(d.Texts, '40') -%}<a href="#entrevista">[+] Ver Entrevista</a>&nbsp;{%- endif %}</div>
