correccion en la identificacion de los JS asociados

--- a/content/templates/product/index.html
+++ b/content/templates/product/index.html
@@ -80,9 +80,9 @@
 
 	<!-- Data Scripts -->
 	<script type="text/javascript" src="{{ url.data }}home-exchange.js"></script>
-	<script type="text/javascript" src="{{ url.data }}product-comments.js"></script>
-	<script type="text/javascript" src="{{ url.data }}product-related.js"></script>
-	<script type="text/javascript" src="{{ url.data }}product-price.js"></script>
+	<script type="text/javascript" src="{{ url.data }}{{ d.LinkBase }}-comments.js"></script>
+	<script type="text/javascript" src="{{ url.data }}{{ d.LinkBase }}-related.js"></script>
+	<script type="text/javascript" src="{{ url.data }}{{ d.LinkBase }}-price.js"></script>
 
 	<script type="text/javascript">
 
