Moving section styles to fragments for product

--- a/content/templates/subject/index.html
+++ b/content/templates/subject/index.html
@@ -5,7 +5,7 @@
 {% block head_extra %}
     <link type="text/css" rel="stylesheet" href="{{ url.data }}/css/jquery.qtip.min.css">
     <style type="text/css">
-        {% include "subject/styles.css" %} {# multi-section #}
+        {% include "fragments/section_style.css" %} {# multi-section #}
         {% include "fragments/tinycarousel.css" %}
         {% include "fragments/showcase.css" %}
     </style>
