--- a/content/templates/product/index.html
+++ b/content/templates/product/index.html
@@ -2,15 +2,7 @@
 
 {% block head_extra %}
     <style type="text/css">
-    	{%- if d.Categoria_Seccion == 1 -%}
-    		{% include "css/seccion_libros.css" %}
-    	{%- elif d.Categoria_Seccion == 4 -%}
-    		{% include "css/seccion_musica.css" %}
-    	{%- elif d.Categoria_Seccion == 5 -%}
-    		{% include "css/seccion_peliculas.css" %}
-    	{%- elif d.Categoria_Seccion == 3 -%}
-    		{% include "css/seccion_pasatiempos.css" %}
-    	{%- endif %}
+        {% include "fragments/section_style.css" %} {# multi-section #}
         {% include "product/styles.css" %}
         {% include "fragments/cart.css" %}
         {% include "fragments/common.css" %}
