correcciones en las URLs

--- a/content/templates/product/index.html
+++ b/content/templates/product/index.html
@@ -58,7 +58,7 @@
 
 {% block scripts_extra -%}
 	<!-- JFather -->
-	<script type="text/javascript" src="{{ url.data }}js/jfather.js"></script>
+	<script type="text/javascript" src="{{ url.data }}/js/jfather.js"></script>
 
 	<script type="text/javascript">
 		{% include "fragments/exchange.js" %}
@@ -71,7 +71,7 @@
 	</script>
 
 	<!-- Data Scripts -->
-	<script type="text/javascript" src="{{ url.data }}home-exchange.js"></script>
+	<script type="text/javascript" src="{{ url.data }}/home-exchange.js"></script>
 	<script type="text/javascript" src="{{ url.data }}{{ d.LinkBase }}-comments.js"></script>
 	<script type="text/javascript" src="{{ url.data }}{{ d.LinkBase }}-related.js"></script>
 	<script type="text/javascript" src="{{ url.data }}{{ d.LinkBase }}-price.js"></script>
