--- a/content/templates/product/index.html
+++ b/content/templates/product/index.html
@@ -121,7 +121,7 @@
 	    fillComments('detail');
 	    fillRelatedProduct(null);
 	    {%- if d.Categoria_Seccion == 1 -%}
-	    	{% include "product/googleBooks.js" %}
+	    	{# include "product/googleBooks.js" #}
 	    {%- endif %}
 
 	</script>
