--- a/content/templates/product/index.html
+++ b/content/templates/product/index.html
@@ -123,6 +123,6 @@
 	    {%- if d.Categoria_Seccion == 1 -%}
 	    	{# include "product/googleBooks.js" #}
 	    {%- endif %}
-
+	    {% include "fragments/right_menu.js" %}
 	</script>
 {%- endblock %}
