--- a/content/templates/fragments/right_menu.html
+++ b/content/templates/fragments/right_menu.html
@@ -1,21 +1,22 @@
 <div class="panelSecciones" id="divBarraDerecha">
-	{% if SubjectId in ('2', '3', '4', '5', '6') %}
-	    <a href="/libros" id="panelSeccLibros" title="Libros"><span></span></a>
-	{% endif %}
-	{% if SubjectId in ('1', '3', '4', '5', '6') %}
-	    <a href="/musica" id="panelSeccMusica" title="M&uacute;sica"><span></span></a>
-	{% endif %}
-	{% if SubjectId in ('1', '2', '4', '5', '6') %}
-	    <a href="/peliculas" id="panelSeccPeliculas" title="Pel&iacute;culas"><span></span></a>
-	{% endif %}
-	{% if SubjectId in ('1', '2', '3', '5', '6') %}
-	    <a href="/juguetes" id="panelSeccPasatiempos" title="Pasatiempos"><span></span></a>
-	{% endif %}
-	{% if SubjectId in ('1', '2', '3', '5', '6') %}
-	    <a href="/sucursales" id="panelSeccSucursales" title="Sucursales"><span></span></a>
-	{% endif %}
-	{% if SubjectId != '0' %}
+	{%- if d.Categoria_Seccion -%}
+		{%- set SubjectId = d.Categoria_Seccion -%}
+		{%- if SubjectId == 1 -%}
+		    <a href="/musica" id="panelSeccMusica" title="M&uacute;sica"><span></span></a>
+		    <a href="/peliculas" id="panelSeccPeliculas" title="Pel&iacute;culas"><span></span></a>
+		    <a href="/juguetes" id="panelSeccPasatiempos" title="Pasatiempos"><span></span></a>
+		{%- endif %}
+		{%- if SubjectId == 4 -%}
+		    <a href="/peliculas" id="panelSeccPeliculas" title="Pel&iacute;culas"><span></span></a>
+		    <a href="/juguetes" id="panelSeccPasatiempos" title="Pasatiempos"><span></span></a>
+		{% endif %}
+		{%- if SubjectId == 5 -%}
+		    <a href="/juguetes" id="panelSeccPasatiempos" title="Pasatiempos"><span></span></a>
+		{%- endif %}
+		{%- if SubjectId == 3 -%}
+		{%- endif %}
+	{%- endif %}
+		<a href="/sucursales" id="panelSeccSucursales" title="Sucursales"><span></span></a>
 	    <a href="#" onclick="window.open('http://www.yenny-elateneo.com/index.php?idS=1');return false;" id="panelSeccQuid" title="Quid"><span></span></a>
 	    <a href="/extra" id="panelSeccExtra" title="eXtra!"><span></span></a>
-	{% endif %}
 </div>
