--- a/content/templates/fragments/scripts.html
+++ b/content/templates/fragments/scripts.html
@@ -1,8 +1,8 @@
 <!-- Common Scripts -->
-<script type="text/javascript" src="{{ url.data }}/js/jquery-1.4.2.min.js"></script>
+<script type="text/javascript" src="{{ url.data }}/stage0/js/jquery-1.4.2.min.js"></script>
 
 <!-- Site scripts -->
-<script type="text/javascript" src="{{ url.gen_script }}/app.js"></script>
+<script type="text/javascript" src="{{ url.gen_script }}/stage0/js/app.js"></script>
 
 <script type="text/javascript">
 
