--- a/content/templates/product/index.html
+++ b/content/templates/product/index.html
@@ -58,7 +58,7 @@
 
 {% block scripts_extra -%}
 	<!-- JFather -->
-	<script type="text/javascript" src="{{ url.data }}/js/jfather.js"></script>
+	<script type="text/javascript" src="{{ url.data }}/stage0/js/jfather.js"></script>
 
 	<script type="text/javascript">
 		{% include "fragments/exchange.js" %}
