--- a/content/templates/subject/index.html
+++ b/content/templates/subject/index.html
@@ -3,7 +3,7 @@
 {%- set section_name = d['Title']|lower -%}
 
 {% block head_extra %}
-    <link type="text/css" rel="stylesheet" href="{{ url.data }}/css/jquery.qtip.min.css">
+    <link type="text/css" rel="stylesheet" href="{{ url.data }}/stage0/css/jquery.qtip.min.css">
     <style type="text/css">
         {% include "fragments/section_style.css" %} {# multi-section #}
         {% include "fragments/tinycarousel.css" %}
@@ -70,10 +70,10 @@
 
 {% block scripts_extra -%}
 	<!-- JQuery Carousel and qTip -->
-	<script type="text/javascript" src="{{ url.data }}/js/jquery.tinycarousel.js"></script>
-	<script type="text/javascript" src="{{ url.data }}/js/jquery.qtip.min.js"></script>
+	<script type="text/javascript" src="{{ url.data }}/stage0/js/jquery.tinycarousel.js"></script>
+	<script type="text/javascript" src="{{ url.data }}/stage0/js/jquery.qtip.min.js"></script>
 	<!-- JFather -->
-	<script type="text/javascript" src="{{ url.data }}/js/jfather.js"></script>
+	<script type="text/javascript" src="{{ url.data }}/stage0/js/jfather.js"></script>
 
 	<script type="text/javascript">
 	    {% include "fragments/comments.js" %}
