Fix RSS links, remove host

--- a/content/templates/page.html
+++ b/content/templates/page.html
@@ -15,10 +15,10 @@
         <meta name="AUTHOR" content="Tematika.com" >
         <meta name="AuthorMetatags" content="NetOne" >
         <meta name="Resource-type" content="Document" >
-        <link href="http://{{ site_domain }}/rss/rankingLibros.xml" title="RSS" type="application/rss+xml" rel="alternate">
-        <link href="http://{{ site_domain }}/rss/rankingMusica.xml" title="RSS" type="application/rss+xml" rel="alternate">
-        <link href="http://{{ site_domain }}/rss/rankingPeliculas.xml" title="RSS" type="application/rss+xml" rel="alternate">
-        <link href="http://{{ site_domain }}/rss/rankingPasatiempos.xml" title="RSS" type="application/rss+xml" rel="alternate">
+        <link href="/rss/rankingLibros.xml" title="RSS" type="application/rss+xml" rel="alternate">
+        <link href="/rss/rankingMusica.xml" title="RSS" type="application/rss+xml" rel="alternate">
+        <link href="/rss/rankingPeliculas.xml" title="RSS" type="application/rss+xml" rel="alternate">
+        <link href="/rss/rankingPasatiempos.xml" title="RSS" type="application/rss+xml" rel="alternate">
         <link rel="search" type="application/opensearchdescription+xml" title="Tematika" href="/plugin/search/busquedaInicio.xml">
     {%- endblock %}
 
