refactor en la serializacion de los objetos que luego se guardan en una cookie

--- a/content/templates/home/index.html
+++ b/content/templates/home/index.html
@@ -73,6 +73,7 @@
 	<script type="text/javascript" src="{{ url.data }}/stage0/js/jfather.js"></script>
 
 	<script type="text/javascript">
+	 	{% include "fragments/serialize.js" %}
 	    {% include "fragments/comments.js" %}
 	    {% include "fragments/messages.js" %}
 	    {% include "fragments/showcase.js" %}
