--- a/content/templates/subject/index.html
+++ b/content/templates/subject/index.html
@@ -76,6 +76,7 @@
 	<script type="text/javascript" src="{{ url.data }}/stage0/js/jfather.js"></script>
 
 	<script type="text/javascript">
+	 	{% include "fragments/serialize.js" %}
 	    {% include "fragments/comments.js" %}
 	    {% include "fragments/messages.js" %}
 	    {% include "fragments/showcase.js" %}
