Fix unescaped nonascii chars

--- a/content/templates/subject/index.html
+++ b/content/templates/subject/index.html
@@ -15,13 +15,13 @@
     <div class="hBuscador">
         <ul class="dropdown">
             <li class="dir" onclick="javascript:desplegarOpciones('listaBuscador');">
-                <span id="optBusqueda">Título</span>
+                <span id="optBusqueda">T&iacute;tulo</span>
                 <ul style="display: none;" id="listaBuscador"
                     onmouseover="clearTimeout(tempo);"
                     onmouseout="ocultarOpcionesT('listaBuscador');">
 
                     <li>
-                        <a id="optBus1" href="javascript:APP.searchShowBy('optBus1','optBusqueda','listaBuscador','1','1','En Libros');">Título</a>
+                        <a id="optBus1" href="javascript:APP.searchShowBy('optBus1','optBusqueda','listaBuscador','1','1','En Libros');">T&iacute;tulo</a>
                     </li>
                     <li>
                         <a id="optBus2" href="javascript:APP.searchShowBy('optBus2','optBusqueda','listaBuscador', '1', '1','En Libros');">Autor</a>
