--- a/content/templates/macros/slider.html
+++ b/content/templates/macros/slider.html
@@ -96,7 +96,7 @@
                         {%- endif -%}
                         {%- if p.Ranking -%}
                             Ranking: <span class="product-ranking">
-                                {{- '%d'|format(p.Ranking) -}}
+                                {{- p.Ranking -}}
                             </span><br>
                         {%- endif -%}
                         {%- if p.PublishingDateValue -%}
