Fix typo for accent

--- a/content/templates/page.html
+++ b/content/templates/page.html
@@ -57,7 +57,7 @@
                     <a id="divSalir" style="visibility: hidden;" class="hModUsrCerrar"
                         href="/TerminarSesion" title="Salir">salir</a>
                     <div class="hModUsrExtra">
-                        Consulta&acute; tus <br> <a id="lnkCantPuntExtra" href="/extra">puntos</a>eXtra!
+                        Consult&aacute; tus <br> <a id="lnkCantPuntExtra" href="/extra">puntos</a>eXtra!
                     </div>
                     <a href="/IniciarCompra" id="textoCarrito" class="hModUsrCarrito"
                         title="Finalizar la compra"></a> <a href="/compra/carrito.jsp"
