Fix left menu for missing bars

--- a/content/templates/fragments/left_menu.html
+++ b/content/templates/fragments/left_menu.html
@@ -7,9 +7,12 @@
 		<a href="/libros" id="panelSeccLibros" title="Libros"><span></span></a>
 	{% endif %}
 	{%- if SubjectId == 5 -%}
+		<a href="/libros" id="panelSeccLibros" title="Libros"><span></span></a>
 		<a href="/musica" id="panelSeccMusica" title="M&uacute;sica"><span></span></a>
 	{%- endif %}
 	{%- if SubjectId == '3' -%}
+		<a href="/libros" id="panelSeccLibros" title="Libros"><span></span></a>
+		<a href="/musica" id="panelSeccMusica" title="M&uacute;sica"><span></span></a>
 	    <a href="/peliculas" id="panelSeccPeliculas" title="Pel&iacute;culas"><span></span></a>
 	{%- endif %}
 </div>
