--- a/content/templates/subject/index.html
+++ b/content/templates/subject/index.html
@@ -4,6 +4,7 @@
 
 {% block head_extra %}
     <link type="text/css" rel="stylesheet" href="{{ url.data }}/stage0/css/jquery.qtip.min.css">
+    <link type="text/css" rel="stylesheet" href="{{ url.data }}/stage0/css/jquery.treeview.css">
     <style type="text/css">
         {% include "fragments/section_style.css" %} {# multi-section #}
         {% include "fragments/tinycarousel.css" %}
