funcionalidad de alianzas contra el JRun

--- a/content/templates/product/index.html
+++ b/content/templates/product/index.html
@@ -125,5 +125,6 @@
 	    	{# include "product/googleBooks.js" #}
 	    {%- endif %}
 	    {% include "fragments/right_menu.js" %}
+	    {% include "fragments/alliance.js" %}
 	</script>
 {%- endblock %}
