--- a/content/templates/subject/index.html
+++ b/content/templates/subject/index.html
@@ -104,6 +104,7 @@
 		/* Update data */
 	    fillComments('{{ section_name }}');
 	    {% include "fragments/right_menu.js" %}
+	    {% include "fragments/alliance.js" %}
 
         fillTree("arbolLibros", callBackTree);
 
